# rusty-raytracer

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  hello.ppm  image.ppm
.github/workflows/: rust.yml
src/: geom.rs  lights.rs  main.rs  obj.rs  objects.rs  rendering.rs  scene.rs
src/scene/: lights.rs  mod.rs  objects.rs
www/: LICENSE
