[package]
name = "rusty-raytracer"
version = "0.1.0"
authors = ["Anuar Talipov <anuartb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.3"
lazy_static = "1.4.0"
rand = "0.7.3"
rayon = "1.3.1"