[package]
name = "rusty-raytracer"
version = "0.1.0"
authors = ["Anuar Talipov <anuartb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
lazy_static = "1.4.0"
nalgebra-glm = "0.3"
rand = "0.7.3"
rayon = "1.3.1"